menu btn fixed ad z-index

--- a/sass/components/_menu-btn.scss
+++ b/sass/components/_menu-btn.scss
@@ -1,5 +1,7 @@
 .menu-btn {
-    position: relative;
+    position: fixed;
+    top: 10px;
+    right: 15px;
     margin-left: auto;
     display: flex;
     align-items: center;
@@ -9,7 +11,7 @@
     background-color: transparent;
     border: none;
     outline: transparent;
-    
+    z-index: 10;
     transition: fill $primaryAnimation;
     &:hover,
     &:focus {
